--- a/Part 1: Predicting House Prices/Coding Companion for Intuitive Deep Learning Part 1 Annotated.ipynb
+++ b/Part 1: Predicting House Prices/Coding Companion for Intuitive Deep Learning Part 1 Annotated.ipynb
@@ -1,13 +1,10 @@
-//Name: Khatija Khan
-//Author: Joseph Lee
-
 {
  "cells": [
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Coding Companion for Intuitive Deep Learning Part 1 (Annotated)"
+    "# Coding Companion for Intuitive Deep Learning Part 1 (Annotated) Name: Khatija Khan || Author: Joseph Lee"
    ]
   },
   {
