--- a/Part 2: Image Recognition CIFAR-10/Coding Companion to Intuitive Deep Learning Part 2 (Annotated).ipynb
+++ b/Part 2: Image Recognition CIFAR-10/Coding Companion to Intuitive Deep Learning Part 2 (Annotated).ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Coding Companion for Intuitive Deep Learning Part 2 (Annotated)"
+    "# Coding Companion for Intuitive Deep Learning Part 2 (Annotated) Name: Khatija Khan || Author: Josephlee"
    ]
   },
   {
